--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "coding testing for supermetrics",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "node ./src/Index.js"
   },
   "keywords": [
     "supermetrics",
