--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
+    "json-beautify": "^1.1.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.6"
   },
